--- a/styles/exercise.css
+++ b/styles/exercise.css
@@ -89,6 +89,8 @@ body {
     font-size: clamp(0.9rem, 3vw, 1.2rem);
     display: -webkit-box;
     -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
