--- a/styles/main.css
+++ b/styles/main.css
@@ -221,13 +221,15 @@ h2 {
     color: rgba(255, 255, 255, 0.8);
     font-size: 0.9rem;
     /* Remove the border-top */
-    padding: 0 1rem;
+    padding: 1rem;
+    margin-top: 1rem; 
 }
 
 @media screen and (max-width: 768px) {
     .copyright {
         font-size: 0.8rem;
         padding: 0.75rem 0;
+        margin-top: 0.5rem; 
     }
 }
 
