--- a/styles/main.css
+++ b/styles/main.css
@@ -176,7 +176,13 @@ main {
     margin: 0 auto;
     padding: 2rem;
 }
+.
 
+@media screen and (max-width: 768px) {
+    .hero-image {
+        margin-bottom: 1rem;
+    }
+}
 .card {
     perspective: 1000px;
     min-height: 350px;
@@ -191,6 +197,20 @@ main {
     text-align: center;
     transition: transform 0.8s;
     transform-style: preserve-3d;
+}
+
+card-image {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+    margin-bottom: 1.5rem;
+    box-shadow: 0 4px 6px var(--shadow);
+}
+
+@media screen and (max-width: 768px) {
+    .card-image {
+        margin-bottom: 1rem;
+    }
 }
 
 .card:hover .card-inner {
