--- a/styles/main.css
+++ b/styles/main.css
@@ -60,10 +60,10 @@
         color: #8e94c4;
     }
     .zen-text {
-        color: #4c9ba9;
+        color: #55adbd;
     }
     .wim-text {
-        color: #6d89a3;
+        color: #4c88c0;
     }
     .free-text {
         background: linear-gradient(145deg, #ffd070, #ffab58);
