--- a/styles/main.css
+++ b/styles/main.css
@@ -63,7 +63,7 @@
         color: #55adbd;
     }
     .wim-text {
-        color: #4c88c0;
+        color: #4CA1AF;
     }
     .free-text {
         background: linear-gradient(145deg, #ffd070, #ffab58);
